--- a/fe-app/src/assets/scss/global.scss
+++ b/fe-app/src/assets/scss/global.scss
@@ -19,6 +19,10 @@ body {
   align-items: center;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .mt-2 {
   margin-top: 2rem;
 }
@@ -33,6 +37,13 @@ body {
 
 .mb-2 {
   margin-bottom: 2rem;
+}
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
+.mb-6 {
+  margin-bottom: 6rem;
 }
 
 .p-2 {
@@ -50,3 +61,9 @@ body {
 .h-full {
   height: 100%;
 }
+
+.bold {
+  font-weight: bold;
+}
+ 
+
